--- a/taskarti/pubspec.yaml
+++ b/taskarti/pubspec.yaml
@@ -11,10 +11,13 @@ dependencies:
     sdk: flutter
   flutter_svg: ^2.2.1
   gap: ^3.0.1
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   image_picker: ^1.2.0
 
   intl: ^0.20.2
   lottie: ^3.3.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
