--- a/taskarti/pubspec.yaml
+++ b/taskarti/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ^3.8.1
 
 dependencies:
+  date_picker_timeline: ^1.2.7
   flutter:
     sdk: flutter
   flutter_svg: ^2.2.1
@@ -23,7 +24,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-
+  build_runner: ^2.4.0
+  hive_generator: ^2.0.0
 flutter:
   uses-material-design: true
 
